added post endpoint to add a post, as well as button on frontend to add a post and test endpoint

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="main-body"></div>
     <button id="load-more">load more</button>
+    <button id="post">add post</button>
 </body>
 <script src="./script.js"></script>
 
