started to add edit function, currently working on making posts cickable, need to just add eventlistener to each post div when it is injected

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div id="main-body"></div>
     <button id="load-more">load more</button>
     <button id="post">add post</button>
+    <button id="activate">activate post select</button>
+
 </body>
 <script src="./script.js"></script>
 
