combined post and upload endpoints so that an image can be uploaded allong with text, also updated frontend /post fetch to upload the image and text

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         <label for="">enter text</label>
         <input type="text" id="createPostTextInput">
 
-        <button id="createPostButton">Create</button>
-    </form>
+        <!-- </form>
 
-    <form action="" id="uploadImgForm">
+    <form action="" id="uploadImgForm"> -->
         <input id="uploadImg" type="file">
-        <button id="uploadImgBtn">upload</button>
+        <button id="createPostButton">Create</button>
+
+        <!-- <button id="uploadImgBtn">upload</button> -->
     </form>
 
 
