added some comments and reinstated post add with random image

--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
     <form action="" id="createPostForm">
         <label for="">enter title</label>
         <input type="text" id="createPostTitleInput">
+
         <label for="">enter text</label>
         <input type="text" id="createPostTextInput">
 
-        <!-- </form>
+        <input id="uploadImg" type="file" accept="image/jpeg, image/jpg, image/png">
 
-    <form action="" id="uploadImgForm"> -->
-        <input id="uploadImg" type="file">
         <button id="createPostButton">Create</button>
 
-        <!-- <button id="uploadImgBtn">upload</button> -->
     </form>
 
 
